<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_2"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:elevation="0dp"

        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"

            />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:background="@drawable/main_backg"
        android:orientation="vertical"

        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:src="@drawable/ic_computer" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="74dp"
            android:gravity="center"
            android:text="@string/select_gender"
            android:textColor="@color/main_gray"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/manBtn"
            android:layout_width="232dp"
            android:layout_height="68dp"
            android:layout_gravity="center"
            android:text="@string/man"
            android:textAllCaps="false"
            android:textColor="@color/main_gray"
            android:textSize="20sp"
            android:layout_marginTop="57dp"
            android:background="@drawable/button"
            android:stateListAnimator="@null"
            />


        <Button
            android:id="@+id/womanBtn"
            android:layout_width="232dp"
            android:layout_height="68dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/button"
            android:stateListAnimator="@null"
            android:text="@string/women"
            android:textAllCaps="false"
            android:textColor="@color/main_gray"
            android:textSize="20sp" />
    </LinearLayout>


</LinearLayout>