<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUs"
    android:orientation="vertical"
    android:background="@color/gray_2"
    >


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:elevation="0dp"

        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"

            />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/backBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="-5dp"
            android:layout_marginTop="-6dp"
            android:layout_marginRight="-5dp"
            android:layout_marginBottom="-6dp"
            android:background="@drawable/back_button_anim"
            android:gravity="left|center"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingLeft="40dp"
            android:stateListAnimator="@null"
            android:text="@string/back_sym"
            android:textColor="@color/main_gray"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/about_us"
            android:textColor="@color/main_gray"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
    


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:gravity="center"
        android:orientation="vertical"

        >

        <FrameLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_backg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="19dp">

                <TextView
                    android:id="@+id/textOpt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us_descr"
                    android:textSize="20sp"
                    android:lineSpacingMultiplier="1.2"
                    />


            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>