<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WoPosts2_2"
    android:orientation="vertical"
    android:background="@color/gray_2"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:elevation="0dp"

        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"

            />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/backBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="-5dp"
            android:layout_marginTop="-6dp"
            android:layout_marginRight="-5dp"
            android:layout_marginBottom="-6dp"
            android:background="@drawable/back_button_anim"
            android:gravity="left|center"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingLeft="40dp"
            android:stateListAnimator="@null"
            android:text="@string/back_sym"
            android:textColor="@color/main_gray"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/for_dry"
            android:textColor="@color/main_gray"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/changePostBtn"
            android:layout_width="220dp"
            android:layout_height="53dp"
            android:layout_marginRight="57dp"
            android:background="@drawable/button"
            android:stateListAnimator="@null"
            android:text="@string/change_program"
            android:textAllCaps="false"
            android:textColor="@color/main_gray"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/currDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Сегодня\n18.02.2021" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:gravity="center"
        android:orientation="vertical"

        >

        <FrameLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_backg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="19dp">

                <TextView
                    android:id="@+id/textOpt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1. Бег - 20 мин"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textOpt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="2. Присед - вес 10 кг - 10 раз"
                    android:textSize="20sp"

                    />

                <TextView
                    android:id="@+id/textOpt3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="3. Отжимание от поле - 20 раз"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textOpt4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Среднее время тренировки 45 мин"
                    android:textSize="20sp"

                    />

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>